--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css estilos/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="scss/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">     
     <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
